--- a/数据结构/二叉树/树的基本术语以及二叉树详解.md
+++ b/数据结构/二叉树/树的基本术语以及二叉树详解.md
@@ -91,12 +91,267 @@ https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E
   * 如果 2i>n,则这个结点没有左孩子，否则他的左孩子编号 = 2i
   * 如果 2i+1>n,则这个结点没有又孩子，否则他的左孩子编号 = 2i+1
 
-  # 二叉树的存储
+# 二叉树的存储
 
-  ## 顺序存储
+## 顺序存储
 
-  使用顺序存储结构（一组地址连续的存储单元）比如数组，
+使用顺序存储结构（一组地址连续的存储单元）比如数组，我们来看一个完全二叉树的例子：
 
-  ## 链实存储
+![1539748895962](E:\文档\study-note\数据结构\二叉树\assets\1539748895962.png)
 
+用数组来存就是
+
+| 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 |
+
+那么一个非完全二叉树怎么存呢？只要将结点和完全二叉树相对照就可以了
+
+![1539743664508](E:\文档\study-note\数据结构\二叉树\assets\1539748836544.png)
+
+
+
+| 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 0 | 9 |
+
+**0 表示没有结点**
+
+## 链式存储
+
+L 代表左指针
+
+R 代表右指针
+
+P 代表指向双亲的指针
+
+* 二叉链表：
+
+  ![1539750023257](E:\文档\study-note\数据结构\二叉树\assets\1539750090311.png)
+
+* 三叉链表
+
+![1539750557670](E:\文档\study-note\数据结构\二叉树\assets\1539750557670.png)
+
+# 二叉树的遍历
+
+本届我们会讨论，各种遍历方式，以及递归遍历和非递归遍历
+
+**为什么我们有了递归遍历，还需要知道非递归遍历呢？**
+
+**递归的优点是**：代码简单，代码简洁，易于理解 
+
+**递归的缺点是**：占用的调用栈多，如果遇到数据庞大的情况，很可能导致调用栈无限增长，这样带来的问题一个是处理性能会比非递归慢，一个是大多数高级语言的设计，调用栈都是有深度（数量）限制的，比如java中JVM的虚拟机栈，就是有深度（数量）限制
+
+**这时候你觉得不需要了解 非递归的实现吗？**
+
+* 首先我们吧左子树的跟结点记作 L , 同理右子树记作 R , 双亲节点记作 P
+
+* 然后我们需要遍历的树
+
+  ![1539752408407](E:\文档\study-note\数据结构\二叉树\assets\1539752408407.png)
+
+* 主体代码（用来了解这个遍历算法的整体的结构设计就没太在意）
+
+  树结点类
+
+  ```java
+  public class BinaryLinkedNode {
   
+      public static int LEFT = 0;
+      String value;
+      BinaryLinkedNode left;
+      BinaryLinkedNode right;
+  
+      public BinaryLinkedNode(String v) {
+          this.value = v;
+      }
+      /**
+       * @param value 树结点的值
+       * @param flag  标记是插入左还是右的标志
+       */
+      public BinaryLinkedNode insertChildren(String value, int flag) {
+          BinaryLinkedNode node = new BinaryLinkedNode(value);
+          if (LEFT == flag) {
+              this.left = node;
+          } else {
+              this.right = node;
+          }
+          return node;
+      }
+  }
+  ```
+
+  测试，以及初始化树的方法定义
+
+  ```java
+  public class Demo {
+      public static void main(String[] args) {
+          BinaryLinkedNode root = init();
+          recursionPreOrderTraverse(root);
+      }
+  		// 初始化我们上图中的树结构
+      public static BinaryLinkedNode init() {
+          BinaryLinkedNode root =  new BinaryLinkedNode("-");
+          BinaryLinkedNode left = root.insertChildren("+", 0);
+          left.insertChildren("a", 0);
+          BinaryLinkedNode right = left.insertChildren("*", 1);
+          right.insertChildren("b", 0);
+          right = right.insertChildren("-", 1);
+          right.insertChildren("c", 0);
+          right.insertChildren("d", 1);
+  
+          right = root.insertChildren("/", 1);
+          right.insertChildren("e", 0);
+          right.insertChildren("f", 1);
+          return root;
+      }
+      /**
+       * 递归先序遍历
+       */
+      public static void recursionPreOrderTraverse(BinaryLinkedNode root) {
+          if(root!= null) {
+              print(root);
+              recursionPreOrderTraverse(root.left);
+              recursionPreOrderTraverse(root.right);
+          }
+      }
+  
+      private static void print(BinaryLinkedNode v) {
+          System.out.print(" " + v.value + " ");
+      }
+  }
+  ```
+
+## 先序遍历 = PLR
+
+* 访问根节点
+* 先序遍历左子树
+* 先序遍历右子树
+* 上图的正确结果：` -  +  a  *  b  -  c  d  /  e  f `
+
+### java代码
+
+#### 递归实现
+
+```java
+/**
+ * 递归先序遍历
+ */
+public static void recursionPreOrderTraverse(BinaryLinkedNode root) {
+    if (root != null) {
+        print(root);
+        recursionPreOrderTraverse(root.left);
+        recursionPreOrderTraverse(root.right);
+    }
+}
+```
+
+#### 非递归实现
+
+* 二叉链表：
+
+  ```java
+  /**
+   * 非递归先序遍历
+   */
+  public static void PreOrderTraverse(BinaryLinkedNode root) {
+      //二叉链表的结构我们需要利用栈来保存结点，实现非递归先序遍历
+      LinkedList<BinaryLinkedNode> stack = new LinkedList<>();
+      BinaryLinkedNode p = root;
+      while (p != null || !stack.isEmpty()) {
+          if (p != null) {
+              print(p);
+          }
+          if (p.left != null) {
+              stack.push(p);//压栈
+              p = p.left;
+          } else {
+              if(!stack.isEmpty()) {
+                  p = stack.pop();//出栈
+              }
+              p = p.right;
+          }
+      }
+  }
+  ```
+
+* 三叉链表
+
+## 中序遍历 = LPR
+
+- 中序遍历左子树
+- 访问根节点
+- 中序遍历右子树
+- 上图的正确结果：` a  +  b  *  c  -  d  -  e  /  f `
+
+### java代码
+
+#### 递归实现
+
+```java
+/**
+ * 递归中序遍历
+ */
+public static void recursionInOrderTraverse(BinaryLinkedNode root) {
+    if (root != null) {
+        recursionInOrderTraverse(root.left);
+        print(root);
+        recursionInOrderTraverse(root.right);
+    }
+}
+```
+
+#### 非递归实现
+
+- 二叉链表：
+
+  ```java
+  /**
+   * 非递归中序遍历
+   */
+  public static void inOrderTraverse(BinaryLinkedNode root) {
+      //二叉链表的结构我们需要利用栈来保存结点，实现非递归中序遍历
+      LinkedList<BinaryLinkedNode> stack = new LinkedList<>();
+      BinaryLinkedNode p = root;
+      while (p != null || !stack.isEmpty()) {
+          if (p != null) {
+              stack.push(p);//压栈
+              p = p.left;
+          }else {
+              if (!stack.isEmpty()) {
+                  p = stack.pop();//出栈
+              }
+              print(p);
+              p =  p.right;
+          }
+      }
+  }
+  ```
+
+- 三叉链表：
+
+## 后序遍历 = LRP
+
+- 后序遍历左子树
+- 后序遍历右子树
+- 访问根节点
+- 上图的正确结果：` a  b  c  d  -  *  +  e  f  /  - `
+
+### java代码
+
+#### 递归实现
+
+```java
+/**
+ * 递归后序遍历
+ */
+public static void recursionPostOrderTraverse(BinaryLinkedNode root) {
+    if (root != null) {
+        recursionPostOrderTraverse(root.left);
+        recursionPostOrderTraverse(root.right);
+        print(root);
+    }
+}
+```
+
+#### 非递归实现
+
+- 二叉链表
+- 三叉链表
