--- a/数据结构/二叉树/树的基本术语以及二叉树详解.md
+++ b/数据结构/二叉树/树的基本术语以及二叉树详解.md
@@ -13,7 +13,7 @@ https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E
 * 有且仅有一个根节点 `root`
 * n>1时，其余节点可分为m (m>0) 个互不相交的子树
 
-![树的示例](E:\文档\study-note\数据结构\二叉树\assets\1539736769234.png)
+![树的示例](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539736769234.png)
 
 # 树的基本术语
 
@@ -39,7 +39,7 @@ https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E
 
 在看下面的性质之前我们先看一个二叉树的图，后面你们看性质的时候可以结合这个图来看
 
-![1539742231274](E:\文档\study-note\数据结构\二叉树\assets\1539742231274.png)
+![1539742231274](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539742231274.png)
 
 * **在二叉树的第i层最多只有2[^i-1]个结点**
 
@@ -63,27 +63,27 @@ https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E
 
 * **满二叉树**：一个深度为k且有2[^k]-1结点的二叉树称为满二叉树，如图：
 
-  ![1539748752863](E:\文档\study-note\数据结构\二叉树\assets\1539748752863.png)
+  ![1539748752863](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539748752863.png)
 
 * **完全二叉树**：一个二叉树当且仅当每一个结点都与深度与其相同的满二叉树中的编号相对应时，称为完全二叉树：如图：
 
-  ![1539743570728](E:\文档\study-note\数据结构\二叉树\assets\1539748771079.png)
+  ![1539743570728](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539748771079.png)
 
-  ![1539743592282](E:\文档\study-note\数据结构\二叉树\assets\1539748791157.png)
+  ![1539743592282](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539748791157.png)
 
-  ![1539743602521](E:\文档\study-note\数据结构\二叉树\assets\1539748806343.png)
+  ![1539743602521](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539748806343.png)
 
   这些都是完全二叉树
 
   而这样的就不是完全二叉树了：
 
-  ![1539743664508](E:\文档\study-note\数据结构\二叉树\assets\1539748836544.png)
+  ![1539743664508](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539748836544.png)
 
 * 具有n个结点的**完全二叉树**的深度为|log<sub>2<sub/>n|+1
 
 * 如果给定一颗有n个结点的完全二叉树，且结点按照层序编号记作i = [0,n]，如图
 
-  ![1539748866983](E:\文档\study-note\数据结构\二叉树\assets\1539748866983.png)
+  ![1539748866983](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539748866983.png)
 
   有一下性质：
 
@@ -97,7 +97,7 @@ https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E
 
 使用顺序存储结构（一组地址连续的存储单元）比如数组，我们来看一个完全二叉树的例子：
 
-![1539748895962](E:\文档\study-note\数据结构\二叉树\assets\1539748895962.png)
+![1539748895962](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539748895962.png)
 
 用数组来存就是
 
@@ -105,7 +105,7 @@ https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E
 
 那么一个非完全二叉树怎么存呢？只要将结点和完全二叉树相对照就可以了
 
-![1539743664508](E:\文档\study-note\数据结构\二叉树\assets\1539748836544.png)
+![1539743664508](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539748836544.png)
 
 
 
@@ -123,11 +123,11 @@ P 代表指向双亲的指针
 
 * 二叉链表：
 
-  ![1539750023257](E:\文档\study-note\数据结构\二叉树\assets\1539750090311.png)
+  ![1539750023257](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539750090311.png)
 
 * 三叉链表
 
-![1539750557670](E:\文档\study-note\数据结构\二叉树\assets\1539750557670.png)
+![1539750557670](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539750557670.png)
 
 # 二叉树的遍历
 
@@ -145,7 +145,7 @@ P 代表指向双亲的指针
 
 * 然后我们需要遍历的树
 
-  ![1539752408407](E:\文档\study-note\数据结构\二叉树\assets\1539752408407.png)
+  ![1539752408407](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539752408407.png)
 
 * 主体代码（用来了解这个遍历算法的整体的结构设计就没太在意）
 
