--- a/数据结构/二叉树/树的基本术语以及二叉树详解.md
+++ b/数据结构/二叉树/树的基本术语以及二叉树详解.md
@@ -248,28 +248,39 @@ public static void recursionPreOrderTraverse(BinaryLinkedNode root) {
 * 二叉链表：
 
   ```java
-  /**
-   * 非递归先序遍历
-   */
-  public static void PreOrderTraverse(BinaryLinkedNode root) {
-      //二叉链表的结构我们需要利用栈来保存结点，实现非递归先序遍历
-      LinkedList<BinaryLinkedNode> stack = new LinkedList<>();
-      BinaryLinkedNode p = root;
-      while (p != null || !stack.isEmpty()) {
-          if (p != null) {
-              print(p);
-          }
-          if (p.left != null) {
-              stack.push(p);//压栈
-              p = p.left;
-          } else {
-              if(!stack.isEmpty()) {
-                  p = stack.pop();//出栈
+      /**
+       * 非递归先序遍历
+       */
+      public static void PreOrderTraverse(BinaryLinkedNode root) {
+          //二叉链表的结构我们需要利用栈来保存结点，实现非递归先序遍历
+          LinkedList<BinaryLinkedNode> stack = new LinkedList<>();
+          BinaryLinkedNode p = root;
+          while (p != null || !stack.isEmpty()) {
+  //            if (p != null) {
+  //                print(p);
+  //            }
+  //            if (p.left != null) {
+  //                stack.push(p);//压栈
+  //                p = p.left;
+  //            } else {
+  //                if (!stack.isEmpty()) {
+  //                    p = stack.pop();//出栈
+  //                }
+  //                p = p.right;
+  //            }
+              while(p != null)
+              {
+                  print(p);
+                  stack.push(p);
+                  p = p.left;
               }
-              p = p.right;
+              if(!stack.isEmpty())
+              {
+                  p = stack.pop();
+                  p = p.right;
+              }
           }
       }
-  }
   ```
 
 * 三叉链表
@@ -307,22 +318,33 @@ public static void recursionInOrderTraverse(BinaryLinkedNode root) {
    * 非递归中序遍历
    */
   public static void inOrderTraverse(BinaryLinkedNode root) {
-      //二叉链表的结构我们需要利用栈来保存结点，实现非递归中序遍历
-      LinkedList<BinaryLinkedNode> stack = new LinkedList<>();
-      BinaryLinkedNode p = root;
-      while (p != null || !stack.isEmpty()) {
-          if (p != null) {
-              stack.push(p);//压栈
-              p = p.left;
-          }else {
+          //二叉链表的结构我们需要利用栈来保存结点，实现非递归中序遍历
+          LinkedList<BinaryLinkedNode> stack = new LinkedList<>();
+          BinaryLinkedNode p = root;
+          while (p != null || !stack.isEmpty()) {
+  //  		第一种方式          
+  //            if (p != null) {
+  //                stack.push(p);//压栈
+  //                p = p.left;
+  //            }else {
+  //                if (!stack.isEmpty()) {
+  //                    p = stack.pop();//出栈
+  //                }
+  //                print(p);
+  //                p =  p.right;
+  //            }
+  //  		第二种方式          
+              while(p != null) {
+                  stack.push(p);//压栈
+                  p = p.left;
+              }
               if (!stack.isEmpty()) {
                   p = stack.pop();//出栈
+                  print(p);
+                  p =  p.right;
               }
-              print(p);
-              p =  p.right;
           }
       }
-  }
   ```
 
 - 三叉链表：
