--- a/数据结构/二叉树/树的基本术语以及二叉树详解.md
+++ b/数据结构/二叉树/树的基本术语以及二叉树详解.md
@@ -377,6 +377,29 @@ public static void recursionPostOrderTraverse(BinaryLinkedNode root) {
 
 - 二叉链表：
 
-  
+  ```java
+  /**
+   * 非递归后序遍历
+   */
+  public static void postOrderTraverse(BinaryLinkedNode root) {
+      //栈先进后出，我将后序遍历的输出结果倒序一个个push到栈中，最后一个个pop出来就可以了
+      LinkedList<BinaryLinkedNode> stack = new LinkedList<>();
+      LinkedList<BinaryLinkedNode> stack2 = new LinkedList<>();
+      stack2.push(root);
+      while ( !stack2.isEmpty()) {
+          BinaryLinkedNode parent = stack2.pop();
+          if(parent.left!=null){
+              stack2.push(parent.left);
+          }
+          if(parent.right!=null){ // 或入栈，stack2.pop()先出 这样就能倒序往stack中存放结点
+              stack2.push(parent.right);
+          }
+          stack.push(parent);
+      }
+      while (!stack.isEmpty()){
+          print(stack.pop());
+      }
+  }
+  ```
 
 - 三叉链表
