--- a/数据结构/二叉树/树+基础二叉树详解.md
+++ b/数据结构/二叉树/树+基础二叉树详解.md
@@ -1,10 +1,8 @@
-# 编辑图片的路径，文章写完后删除这部分内容
-
-https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/
-
 # 申明
 
 内容主要学自我大学的一个数据结构的书《数据结构(C语言版)》
+
+关于二叉树更多的运用请看我这个目录中的别的内容，今后也会持续做更新 https://github.com/Alan-Jun/study-note/tree/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91
 
 # 树的定义
 
@@ -403,3 +401,34 @@ public static void recursionPostOrderTraverse(BinaryLinkedNode root) {
   ```
 
 - 三叉链表
+
+## 层序遍历
+
+上文树的定义在中我们有说刀树的层次，这里的层序遍历也就好理解了，就是一层一层从左到右，输出。
+
+上图的正确结果：` -  +  /  a  *  e  f  b  -  c  d `
+
+二叉链表：
+
+```java
+/**
+ * 层序遍历
+ */
+public static void levelOrderTraverse(BinaryLinkedNode root) {
+    // 这里我们使用队列，存储需要输出的结点
+    LinkedList<BinaryLinkedNode> queue = new LinkedList<>();
+    BinaryLinkedNode p = root;
+    queue.add(p);// 第一层入队
+    while (!queue.isEmpty()) {
+        p = queue.remove();
+        print(p);
+        if (p.left != null){
+            queue.add(p.left);
+        }
+        if (p.right != null){
+            queue.add(p.right);
+        }
+    }
+}
+```
+
