--- a/数据结构/二叉树/树+基础二叉树详解.md
+++ b/数据结构/二叉树/树+基础二叉树详解.md
@@ -22,7 +22,7 @@
 * **双亲结点**：一个非终端结点是它子节点的双亲结点
 * **兄弟结点**：具有同一个双亲结点的结点互为兄弟结点
 * **数的层次**：将树的跟作为树的第一层，跟的孩子最为第二层,以此类推
-* **树的深度（高度）**数中结点的最大层次称为树的深度（高度），例如上文中的实例图中的树的 高度=4
+* **树的深度(高度)** 数中结点的最大层次称为树的深度（高度），例如上文中的实例图中的树的 高度=4
 * **堂兄弟结点**：同一层的结点互为堂兄弟结点
 
 # 二叉树的定义
