--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -1,4 +1,12 @@
-# 二叉排序树（查找树，搜索树）
+# 1. 二叉排序树（查找树，搜索树）
 
+## 1.1 二叉排序树的定义
 
+什么是二叉排序树呢？它是具有一下性质的二叉树（关于二叉树请看我关于[二叉树定义](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/%E6%A0%91%2B%E5%9F%BA%E7%A1%80%E4%BA%8C%E5%8F%89%E6%A0%91%E8%AF%A6%E8%A7%A3.md)的内容）:
+
+* 若它的左子树不为空，那么它的左子树上的所有结点的值都小于它的根结点的值
+* 若它的右子树不为空，那么它的右子树上的所有结点的值都大于它的根结点的值
+* 他的左右子树是二叉排序树
+
+如图：
 
