--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -8,5 +8,11 @@
 * 若它的右子树不为空，那么它的右子树上的所有结点的值都大于它的根结点的值
 * 他的左右子树是二叉排序树
 
+注意：在实际运用中，这个值的比较的大小是看你怎么定义的，当然数值的大小是通用的（不排除你对其特殊的定义）
+
 如图：
+
+![1539839046436](E:\文档\study-note\数据结构\二叉树\assets\1539839046436.png)
+
+
 
