--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -1,12 +1,13 @@
 # 1. 二叉排序树（查找树，搜索树）
 
-## 1.1 二叉排序树的定义
+## 1.1 二叉查找树的定义
 
-什么是二叉排序树呢？它是具有一下性质的二叉树（关于二叉树请看我关于[二叉树定义](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/%E6%A0%91%2B%E5%9F%BA%E7%A1%80%E4%BA%8C%E5%8F%89%E6%A0%91%E8%AF%A6%E8%A7%A3.md)的内容）:
+什么是二叉查找树呢？它是具有一下性质的二叉树（关于二叉树请看我关于[二叉树定义](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/%E6%A0%91%2B%E5%9F%BA%E7%A1%80%E4%BA%8C%E5%8F%89%E6%A0%91%E8%AF%A6%E8%A7%A3.md)的内容）:
 
 * 若它的左子树不为空，那么它的左子树上的所有结点的值都小于它的根结点的值
-* 若它的右子树不为空，那么它的右子树上的所有结点的值都大于它的根结点的值
-* 他的左右子树是二叉排序树
+* 若它的右子树不为空，那么它的右子树上的所有结点的值都大于（现在实际索引的算法设计中是 >=）它的根结点的值
+* 他的左右子树是二叉查找树
+* 它属于一种**动态**查找表
 
 注意：在实际运用中，这个值的比较的大小是看你怎么定义的，当然数值的大小是通用的（不排除你对其特殊的定义）
 
@@ -14,5 +15,13 @@
 
 ![1539839046436](E:\文档\study-note\数据结构\二叉树\assets\1539839046436.png)
 
+## 1.2 二叉查找树的查找过程
 
+**注意**：我们知道它是一种动态查找表，也就是说这个树中的结点是可以增改的。那么它的增删改的过程肯定也是会查找这个动作。
+
+**当一个二叉搜索树不为空的时候，如有一个给定值A和根节点的关键字作比较，若想等那么查找成功，否则根据A与当前根结点关键字的大小关系决定去左子树还是右子树进行查找。**
+
+**通常我们使用二叉链表来作为二叉搜索树的存储结构**68
+
+****
 
