--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -21,7 +21,35 @@
 
 **当一个二叉搜索树不为空的时候，如有一个给定值A和根节点的关键字作比较，若想等那么查找成功，否则根据A与当前根结点关键字的大小关系决定去左子树还是右子树进行查找。**
 
-**通常我们使用二叉链表来作为二叉搜索树的存储结构**68
+**通常我们使用二叉链表来作为二叉搜索树的存储结构**
+
+## 1.3 优缺点
+
+* 优点：从他的一个定义以及查找过程，能很容易的看出来，它也是一种二分搜索的实现，不过相比于顺序查找表，的结构以及访问方式它的优势就很大了，就算顺序表使用了二分查找，斐波那契查找，插值查找，也是比不了二分搜索树的查找效率的，但是这里不是说它就是最好的查找表，当然顺着发展，我们有了更多更好用，更加符合我们当前需求的查找结构，但是这个是基础，他可以帮助我们理解后面的发展出来的更好的用于查找的数据结构。
+
+* 缺点：这里有一个国外的数据结构的学习，了解网站，[Binary Search Tree](https://www.cs.usfca.edu/~galles/visualization/BST.html) 我在上面做了一下模拟，基于上文中的二叉排序树的图的内容，按照不同顺序插入：
+
+  * `40,15,21,19,18，17`：进行到这我就没有在进行下去了，原因呢看图：
+
+    ![1539840633788](E:\文档\study-note\数据结构\二叉树\assets\1539840633788.png)
+
+    我们在看我们原来的图深度是5，这里你会说，深度代表什么，那么我们用一个直观的例子来说 : 在原来的图的二叉搜索树中我们要查找17这个值，我们只需要经过5次判断，就可以确定这个值存在；在现在这个结构中呢，需要6次；这样我们就能只管的看出，二叉排序树的缺点了吧，**表中数据动态变化不可控，相同的数据按照不同的顺序传入，得到的结果大不相同，在实际运用中，据对会成为检索的性能瓶颈**；
+
+    下面我会再次用一个极端的例子，让你们更加深刻的理解到这种结构的问题，这里我们按照这样的顺序插入数据：`15，17，18，19，21，40，56，60，68，100`
+
+    ![1539841346239](E:\文档\study-note\数据结构\二叉树\assets\1539841346239.png)
+
+    看到这个结果什么感受，所以这种结构只能作为一个理论基础，在实际运用中是不会采用的。
+
+    
+
+    
+
+  
+
+  
+
+  
 
 ****
 
