--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -19,13 +19,16 @@
 
 **注意**：我们知道它是一种动态查找表，也就是说这个树中的结点是可以增改的。那么它的增删改的过程肯定也是会查找这个动作。
 
-**当一个二叉搜索树不为空的时候，如有一个给定值A和根节点的关键字作比较，若想等那么查找成功，否则根据A与当前根结点关键字的大小关系决定去左子树还是右子树进行查找。**
+**当一个二叉查找树不为空的时候，如有一个给定值A和根节点的关键字作比较，若想等那么查找成功，否则根据A与当前根结点关键字的大小关系决定去左子树还是右子树进行查找。**
 
 **通常我们使用二叉链表来作为二叉搜索树的存储结构**
 
 ## 1.3 优缺点
 
-* 优点：从他的一个定义以及查找过程，能很容易的看出来，它也是一种二分搜索的实现，不过相比于顺序查找表，的结构以及访问方式它的优势就很大了，就算顺序表使用了二分查找，斐波那契查找，插值查找，也是比不了二分搜索树的查找效率的，但是这里不是说它就是最好的查找表，当然顺着发展，我们有了更多更好用，更加符合我们当前需求的查找结构，但是这个是基础，他可以帮助我们理解后面的发展出来的更好的用于查找的数据结构。
+* 优点：
+
+  * 从他的一个定义以及查找过程，能很容易的看出来，它也是一种二分搜索的实现，不过相比于顺序查找表，的结构以及访问方式它的优势就很大了，就算顺序表使用了二分查找，斐波那契查找，插值查找，也是比不了二分搜索树的查找效率的，但是这里不是说它就是最好的查找表，当然顺着发展，我们有了更多更好用，更加符合我们当前需求的查找结构，但是这个是基础，他可以帮助我们理解后面的发展出来的更好的用于查找的数据结构。
+  * **二叉查找树使用中序遍历，是可以拿到一个排序好的的序列的。红黑树也有这样的性质（但是他对基础的这个二叉排序树的设计做了进一步改进），左子树比根节点小，右子树比根节点大。相信从这里你能看出，java中TreeMap是怎么排序的了**
 
 * 缺点：这里有一个国外的数据结构的学习，了解网站，[Binary Search Tree](https://www.cs.usfca.edu/~galles/visualization/BST.html) 我在上面做了一下模拟，基于上文中的二叉排序树的图的内容，按照不同顺序插入：
 
@@ -39,9 +42,9 @@
 
     ![1539841346239](E:\文档\study-note\数据结构\二叉树\assets\1539841346239.png)
 
-    看到这个结果什么感受，所以这种结构只能作为一个理论基础，在实际运用中是不会采用的。
+    看到这个结果什么感受，所以这种结构只能作为一个理论基础，在实际运用中是不会采用的。 
 
-    
+    ## 
 
     
 
