--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -44,15 +44,25 @@
 
     看到这个结果什么感受，所以这种结构只能作为一个理论基础，在实际运用中是不会采用的。 
 
-    ## 
+## 1.4 二叉查找树的增删
 
-    
+增（insert）就不用说了吧，利用查找去做，然后没有别的特别的东西
 
-  
+这里主要说一下删(delete),为什么要说这个呢，是因为需要介绍在删除之后，要保持二叉排序树的中序遍历的结果中结点的前后顺序不变（稳定性）。
 
-  
+分下面三种情况讨论：（P代表双亲结点，PL代表它的左子树，PR代表它的右子树）
 
-  
+* 若结点 P 
+
+
+
+
+
+
+
+
+
+
 
 ****
 
