--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -15,7 +15,19 @@
 
 ![1539839046436](E:\文档\study-note\数据结构\二叉树\assets\1539839046436.png)
 
-## 1.2 二叉查找树的查找过程
+## 1.2 二叉查找树具有的一些特点
+
+* 使用中序遍历得到的结果是排好序的，比如上图，使用中序遍历的结果一定是递增的顺序排列
+
+* 一个结点的直接前驱（中序遍历后的结果序列中这个结点值的前面一个，比如上图，中序遍历结果`15,17,18,19,21,40....`,21这个结点的直接前驱就是19这个结点。）如果这个结点在树中有左子树，
+
+  先转左，然后找右到尽头，一定是它的前驱，如果转左之后没有右，那这个左就是他的前驱，（还是上图的例子21这个结点有左子树吧，转左刀15，然后找右到尽头，18，19，最后就找到了19；在看18这个结点由左子树，我们转左找到17，但是由于没有右子树了，所以这个17就是18的直接前驱）
+
+* 一个结点的直接后继：知道了直接前驱，那么直接后继就不需要过多说明了，和直接前驱的正好相反。
+
+**介绍直接前驱后继这个特点主要是因为，删除这个操作的算法设计要用到这样一个特点**
+
+## 1.3 二叉查找树的查找过程
 
 **注意**：我们知道它是一种动态查找表，也就是说这个树中的结点是可以增改的。那么它的增删改的过程肯定也是会查找这个动作。
 
@@ -23,7 +35,7 @@
 
 **通常我们使用二叉链表来作为二叉搜索树的存储结构**
 
-## 1.3 优缺点
+## 1.4 优缺点
 
 * 优点：
 
@@ -44,7 +56,7 @@
 
     看到这个结果什么感受，所以这种结构只能作为一个理论基础，在实际运用中是不会采用的。 
 
-## 1.4 二叉查找树的增删
+## 1.5 二叉查找树的增删
 
 增（insert）就不用说了吧，利用查找去做，然后没有别的特别的东西
 
@@ -52,7 +64,9 @@
 
 分下面三种情况讨论：（P代表双亲结点，PL代表它的左子树，PR代表它的右子树）
 
-* 若结点 P 
+* 若结点 P 为叶子结点，删除叶子结点不破坏整个树的结构
+* 若结点 P 只有左子树PL或者只有右子树PR，拿只需要将P的双亲结点指向P的指针指向PL或PR。
+* 
 
 
 
