--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -60,17 +60,111 @@
 
 增（insert）就不用说了吧，利用查找去做，然后没有别的特别的东西
 
-这里主要说一下删(delete),为什么要说这个呢，是因为需要介绍在删除之后，要保持二叉排序树的中序遍历的结果中结点的前后顺序不变（稳定性）。
+这里主要说一下删(delete),为什么要说这个呢，是因为需要介绍在删除之后，要保持二叉排序树的中序遍历的结果中结点的前后顺序不变（这里就叫做稳定性了，后文中我都把它叫做稳点性）。
 
 分下面三种情况讨论：（P代表双亲结点，PL代表它的左子树，PR代表它的右子树）
 
 * 若结点 P 为叶子结点，删除叶子结点不破坏整个树的结构
-* 若结点 P 只有左子树PL或者只有右子树PR，拿只需要将P的双亲结点指向P的指针指向PL或PR。
-* 
+
+* 若结点 P 只有左子树PL或者只有右子树PR，只需要将P的双亲结点指向P的指针指向PL或PR。
+
+* 若左右子树不为空为了保证 “ 稳定性 ”，可以有两种做法，为了更加直观我们用一个树来演示：
+
+  ![1539870820922](E:\文档\study-note\数据结构\二叉树\assets\1539871115161.png)
+
+  **中序遍历的结果：`29,35,36,37,47,49,51,56,58,62,73,88,99`**
+
+  **假设这里我们要删除47**
+
+  **注意观察树的深度变化**
+
+  * 第一种是将P的双亲结点指向P的指针指向PL，将PR作为P的直接前驱的PR，结果：
+
+    
+
+    ![1539871310522](E:\文档\study-note\数据结构\二叉树\assets\1539871310522.png)
+
+    **树的深度是6**
+
+  * 第二种做法是，令改结点P的直接前驱（或直接后继）替代P的位置，（查找直接前驱和后记的方法在上文1.2节当中有介绍），然后用这个直接前驱（直接后继）的双亲结点序接这个直接前驱（直接后继）的做子树或者右子树（这里我为什么用或呢？请你结合我前面说的前驱（后继）的特点来思考一下,虽然下文1.6节的算法代码中我有做说明），下面我分别给出用 前驱或后继 得到的结果图
+
+    * 使用前驱得到的结果图
+
+      ![1539872531318](E:\文档\study-note\数据结构\二叉树\assets\1539872531318.png)
+
+    * 使用后继得到的结果图
+
+    ![1539872603495](E:\文档\study-note\数据结构\二叉树\assets\1539872603495.png)
+
+    **使用前驱（后继）两种方法修改的后二叉树的深度要么不变，要么减少（都会达到这样的效果）,显而易见，我们在实现的使用应该选择前驱（后继）的方式实现算法**
+
+## 1.6 java 实现的删除树中一个结点的算法
+
+* 使用前驱的算法：
+
+  ```java
+  public static BinaryLinkedNode delete(BinaryLinkedNode node) {
+      BinaryLinkedNode temp = node;
+      if (node.right == null) {
+          // 右子树为空，只需要接上左子树
+          node = node.left;
+      } else if (node.right == null) {
+          // 左子树为空，只需要接上右子树
+          node = node.right;
+      } else {
+          // 左右子树都不为空
+          BinaryLinkedNode pre = node.left;// 左转
+          while (pre.right != null) {
+              // 找右刀到尽头
+              temp = pre;//用来记录 pre 的双亲
+              pre = pre.right;
+          }
+          // 替换数据
+          node.value = pre.value;
+          if( temp == node ){
+              // 就是说 左转之后由于没有右子树，那么左转的结点就是node的前驱了，那么只需要接上 pre 的左子树（可能有，也可能没有）
+              temp.left = pre.left;
+          }else{
+              // 就是说 找右边到尽头之后，这个 pre 肯定没有右子树了，至于左子树有没有不知道但是，按照有来做
+              temp.right = pre.left;
+          }
+      }
+  }
+  ```
 
 
 
+* 使用后继的算法：
 
+  ```java
+  public static BinaryLinkedNode delete(BinaryLinkedNode node) {
+      BinaryLinkedNode temp = node;
+      if (node.right == null) {
+          // 右子树为空，只需要接上左子树
+          node = node.left;
+      } else if (node.right == null) {
+          // 左子树为空，只需要接上右子树
+          node = node.right;
+      } else {
+          // 左右子树都不为空
+          BinaryLinkedNode pre = node.left;// 左转
+          while (pre.right != null) {
+              // 找右刀到尽头
+              temp = pre;//用来记录 pre 的双亲
+              pre = pre.right;
+          }
+          // 替换数据
+          node.value = pre.value;
+          if( temp == node ){
+              // 就是说 左转之后由于没有右子树，那么左转的结点就是node的前驱了，那么只需要接上 pre 的左子树（可能有，也可能没有）
+              temp.left = pre.left;
+          }else{
+              // 就是说 找右边到尽头之后，这个 pre 肯定没有右子树了，至于左子树有没有不知道但是，按照有来做
+              temp.right = pre.left;
+          }
+      }
+  }
+  ```
 
 
 
