--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -56,6 +56,8 @@
 
     看到这个结果什么感受，所以这种结构只能作为一个理论基础，在实际运用中是不会采用的。 
 
+  **总结**：针对二叉排序树这样的缺点，人们就想到了在构造他的时候要去做**“平衡化”处理**，这也就有了平很二叉树的定义，在本文第2节，我会介绍平衡二叉树，以及对二叉排序树进行平衡化处理得到的**平衡二叉排序（查找，搜索）树**
+
 ## 1.5 二叉查找树的增删
 
 增（insert）就不用说了吧，利用查找去做，然后没有别的特别的东西
@@ -166,5 +168,33 @@
   }
   ```
 
-****
+# 2 平衡二叉查找（排序，搜索）树
+
+## 2.1 平衡二叉树
+
+平衡二叉树出现的原因，我在1.4节最后的总结里面做了介绍，这里不在重复说明。我们直接看平衡二叉树的定义：
+
+* 它的左右子树都是平衡二叉树
+* 左子树和右子树的深度之差的绝对值绝对超过1
+
+## 2.2 平衡二叉树的平衡因子
+
+* **一个结点的平衡因子 = 该结点左子树深度 - 该结点的右子树深度**
+* **那么平衡二叉树的所有结点的平衡因子取值只能是（-1，0，1），不再这范围，那就说明该二叉树失衡**
+
+## 2.3 利用平衡因子画出来的二叉树的树图
+
+* 平衡二叉树的平衡因子树图：
+
+  ![1539917345242](E:\文档\study-note\数据结构\二叉树\assets\1539917680023.png)
+
+  ![1539917402506](E:\文档\study-note\数据结构\二叉树\assets\1539917402506.png)
+
+* 非平衡二叉树的平衡因子树图：
+
+  ![1539917513301](E:\文档\study-note\数据结构\二叉树\assets\1539917513301.png)
+
+## 2.4 平衡二叉查找树的插入过程
+
+我这我先介绍他用于平衡的旋转过程，然后再用一个实际的例子加上，图，算法，来说明
 
