--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -196,5 +196,39 @@
 
 ## 2.4 平衡二叉查找树的插入过程
 
-我这我先介绍他用于平衡的旋转过程，然后再用一个实际的例子加上，图，算法，来说明
+我这我先介绍他用于平衡的旋转过程，然后再用一个实际的例子加上，图，算法，来说明。
+
+我们在平衡二叉查找树的插入过程中，基本的插入和二叉查找树的插入有事一样的，主要需要做的是” 平衡化“处理，如何在插入一个结点，导致一个树失衡的情况下进行”平衡化“，**首先我们知道，我们做这个平衡只需要争对失衡的子树就可以了**，在知道这里的前提下，我们怎么去平衡子树呢，调整的规律可以归纳为下面四种情况。
+
+* **单向右旋平衡**：由于在结点 P 的左子树的根节点的左子树上插入结点，导致了结点P失衡，平衡因子变为了2，那么我们需要经过一次右旋来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
+
+  ![1539922215775](E:\文档\study-note\数据结构\二叉树\assets\1539922215775.png)
+
+  上图的平衡二叉查找树中我们插入一个 35 ， 得到下图，很明显我们发现下图的的树已经失衡了
+
+  ![1539922356184](E:\文档\study-note\数据结构\二叉树\assets\1539922356184.png)
+
+  
+
+  失衡的树是 50 为root的树，所以我们只要针它就可以了，这时候你们肯定会问怎么右旋，用什么做中心，下面我来讲解，**右旋就是，将失衡的树的 root结点，以他的左子树为中心，顺时针旋转，作为他的左子树的右子树，同时这个原root结点的左子树 指向它原左子树的右子树。**
+
+  **直观的感受下**：上述失衡情况由于是在 50 这个结点的左子树发生的，所以这个旋转的中心首先确定下来是他的左子树，也就是 40 这个结点，将 50 这个结点顺时针旋转下来作为 40 这个结点的右子树，然后将50结点的左子树指向40 结点 的右子树，最后据得到了恢复平衡后的 平衡二叉查找树：
+
+  ![1539923163210](E:\文档\study-note\数据结构\二叉树\assets\1539923163210.png)
+
+  
+
+**可以看到，这个最终平衡化之后的树的深度和没有插入35这个结点之前的树的深度是一样的**
+
+* **单向左旋平衡**：由于在结点 P 的右子树的根节点的右子树上插入结点，导致了结点P失衡，平衡因子变为了-2，那么我们需要经过一次左旋来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
+
+![1539923756815](E:\文档\study-note\数据结构\二叉树\assets\1539923756815.png)
+
+上图的平衡二叉查找树中我们插入一个 68 ， 得到下图，很明显我们发现下图的的树已经失衡了
+
+![1539923918707](E:\文档\study-note\数据结构\二叉树\assets\1539923918707.png)
+
+失衡的树是 40 为root的树，所以我们只要针它就可以了，这时候你们肯定会问怎么左旋，用什么做中心，下面我来讲解，**左旋就是，将失衡的树的 root 结点，以他的右子树为中心，逆时针旋转，作为他的右子树的左子树，同时这个原root结点的右子树 指向它原右子树的左子树。**
+
+**直观的感受**：上述失衡情况由于是在 50 这个结点的左子树发生的，所以这个旋转的中心首先确定下来是他的左子树，也就是 40 这个结点，将 50 这个结点顺时针旋转下来作为 40 这个结点的右子树，然后将50结点的左子树指向40 结点 的右子树，最后据得到了恢复平衡后的 平衡二叉查找树：
 
