--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -212,7 +212,7 @@
 
   失衡的树是 50 为root的树，所以我们只要针它就可以了，这时候你们肯定会问怎么右旋，用什么做中心，下面我来讲解，**右旋就是，将失衡的树的 root结点，以他的左子树为中心，顺时针旋转，作为他的左子树的右子树，同时这个原root结点的左子树 指向它原左子树的右子树。**
 
-  **直观的感受下**：上述失衡情况由于是在 50 这个结点的左子树发生的，所以这个旋转的中心首先确定下来是他的左子树，也就是 40 这个结点，将 50 这个结点顺时针旋转下来作为 40 这个结点的右子树，然后将50结点的左子树指向40 结点 的右子树，最后据得到了恢复平衡后的 平衡二叉查找树：
+  **直观的感受下**：上述失衡情况由于是在 50 这个结点的左子树发生的，所以这个旋转的中心首先确定下来是他的左子树，也就是 40 这个结点，将 50 这个结点顺时针旋转下来作为 40 这个结点的右子树，然后将50结点的左子树指向40 结点 的右子树42，最后得到了恢复平衡后的 平衡二叉查找树：
 
   ![1539923163210](E:\文档\study-note\数据结构\二叉树\assets\1539923163210.png)
 
@@ -230,5 +230,9 @@
 
 失衡的树是 40 为root的树，所以我们只要针它就可以了，这时候你们肯定会问怎么左旋，用什么做中心，下面我来讲解，**左旋就是，将失衡的树的 root 结点，以他的右子树为中心，逆时针旋转，作为他的右子树的左子树，同时这个原root结点的右子树 指向它原右子树的左子树。**
 
-**直观的感受**：上述失衡情况由于是在 50 这个结点的左子树发生的，所以这个旋转的中心首先确定下来是他的左子树，也就是 40 这个结点，将 50 这个结点顺时针旋转下来作为 40 这个结点的右子树，然后将50结点的左子树指向40 结点 的右子树，最后据得到了恢复平衡后的 平衡二叉查找树：
+**直观的感受**：上述失衡情况由于是在 40 这个结点的右子树发生的，所以这个旋转的中心首先确定下来是他的右子树，也就是 50 这个结点，将 40 这个结点逆时针旋转下来作为 50 这个结点的左子树，然后将40结点的右子树指向50 结点 的左子树42，最后得到了恢复平衡后的 平衡二叉查找树：
+
+![1539924441756](E:\文档\study-note\数据结构\二叉树\assets\1539924441756.png)
+
+**不知道你们有没有细心的发现一个规律，旋转的中心结点，和需要调整的树的根结点，在调整之后平衡因子都变成了 0 **.
 
