--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -200,7 +200,7 @@
 
 我们在平衡二叉查找树的插入过程中，基本的插入和二叉查找树的插入有事一样的，主要需要做的是” 平衡化“处理，如何在插入一个结点，导致一个树失衡的情况下进行”平衡化“，**首先我们知道，我们做这个平衡只需要争对失衡的子树就可以了**，在知道这里的前提下，我们怎么去平衡子树呢，调整的规律可以归纳为下面四种情况。
 
-* **单向右旋平衡**：由于在结点 P 的左子树的根节点的左子树上插入结点，导致了结点P失衡，平衡因子变为了2，那么我们需要经过一次右旋来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
+* **单向右旋平衡**：由于在结点 P 的左子树为根节点的左子树上插入结点，导致了结点P失衡，平衡因子变为了2，那么我们需要经过一次右旋来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
 
   ![1539922215775](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539922215775.png)
 
@@ -212,7 +212,7 @@
 
   失衡的树是 50 为root的树，所以我们只要针它就可以了，这时候你们肯定会问怎么右旋，用什么做中心，下面我来讲解，**右旋就是，将失衡的树的 root结点，以他的左子树为中心，顺时针旋转，作为他的左子树的右子树，同时这个原root结点的左子树 指向它原左子树的右子树。**
 
-  **直观的感受下**：上述失衡情况由于是在 50 这个结点的左子树发生的，所以这个旋转的中心首先确定下来是他的左子树，也就是 40 这个结点，将 50 这个结点顺时针旋转下来作为 40 这个结点的右子树，然后将50结点的左子树指向40 结点 的右子树42，最后得到了恢复平衡后的 平衡二叉查找树：
+  **直观的感受下**：上述情况50 作为root的树失衡，根据上文我们说的右旋过程，将这个旋转的中心首先确定下来是他的左子树，也就是 40 这个结点，将 50 这个结点顺时针旋转下来作为 40 这个结点的右子树，然后将50结点的左子树指向40 结点 的右子树42，最后得到了恢复平衡后的 平衡二叉查找树：
 
   ![1539923163210](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539923163210.png)
 
@@ -220,7 +220,7 @@
 
 **可以看到，这个最终平衡化之后的树的深度和没有插入35这个结点之前的树的深度是一样的**
 
-* **单向左旋平衡**：由于在结点 P 的右子树的根节点的右子树上插入结点，导致了结点P失衡，平衡因子变为了-2，那么我们需要经过一次左旋来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
+* **单向左旋平衡**：由于在结点 P 的右子树为根节点的右子树上插入结点，导致了结点P失衡，平衡因子变为了-2，那么我们需要经过一次左旋来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
 
 ![1539923756815](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539923756815.png)
 
@@ -228,10 +228,38 @@
 
 ![1539923918707](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539923918707.png)
 
-失衡的树是 40 为root的树，所以我们只要针它就可以了，这时候你们肯定会问怎么左旋，用什么做中心，下面我来讲解，**左旋就是，将失衡的树的 root 结点，以他的右子树为中心，逆时针旋转，作为他的右子树的左子树，同时这个原root结点的右子树 指向它原右子树的左子树。**
+我们 40 为root的树，的you所以我们只要针它就可以了，这时候你们肯定会问怎么左旋，用什么做中心，下面我来讲解，**左旋就是，将失衡的树的 root 结点，以他的右子树为中心，逆时针旋转，作为他的右子树的左子树，同时这个原root结点的右子树 指向它原右子树的左子树。**
 
-**直观的感受**：上述失衡情况由于是在 40 这个结点的右子树发生的，所以这个旋转的中心首先确定下来是他的右子树，也就是 50 这个结点，将 40 这个结点逆时针旋转下来作为 50 这个结点的左子树，然后将40结点的右子树指向50 结点 的左子树42，最后得到了恢复平衡后的 平衡二叉查找树：
+**直观的感受**：上述情况40作为root的树失衡，根据上文我们说的左旋过程，将这个旋转的中心首先确定下来是他的右子树，也就是 50 这个结点，将 40 这个结点逆时针旋转下来作为 50 这个结点的左子树，然后将40结点的右子树指向50 结点 的左子树42，最后得到了恢复平衡后的 平衡二叉查找树：
 
 ![1539924441756](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539924441756.png)
 
-**不知道你们有没有细心的发现一个规律，旋转的中心结点，和需要调整的树的根结点，在调整之后平衡因子都变成了0**.
+**不知道你们有没有细心的发现一些规律，**
+
+1. 旋转的中心结点，和需要调整的树的根结点，在调整之后平衡因子都变成了0
+2. 插入结点的时候，往左边，树的根结点的平衡因子+1
+3. 插入结点的时候，往右边，树的根结点的平衡因子-1
+4. 一个树的根结点的平衡因子为1，在给它插入一个结点是走向他的左子树，并且他的左子树的平衡因子也是1，这时候1+1=2 ， 树失衡了，
+5. 需要左旋的
+
+* **双向旋转（先右后左）**：由于在结点 P 的右子树为根节点的左子树上插入结点，导致了结点P失衡，平衡因子变为了-2，那么我们需要经过两次旋转（先右旋再左旋）来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
+
+  ![1539923756815](E:\文档\study-note\数据结构\二叉树\assets\1539923756815.png)
+
+  上图的平衡二叉查找树中我们插入一个 39 ， 得到下图，很明显我们发现下图的的树已经失衡了
+
+  ![1539939630223](E:\文档\study-note\数据结构\二叉树\assets\1539939630223.png)
+
+  **将失衡的树的 root 结点，先将root的右子树进行右旋操作，然后在对root为根结点的树进行左旋。**
+
+  **直观的感受**：上述情况40作为root的树失衡，根据上文我们说的先右后左的过程，首先对40结点的右子树，进行右旋操作（旋转过程和前面的是一样的，在这里我就不再次说明），得到图：
+
+  ![1539940360816](E:\文档\study-note\数据结构\二叉树\assets\1539940360816.png)
+
+  然后我们在对其 40结点的树进行左旋，得到图：
+
+  ![1539940529483](E:\文档\study-note\数据结构\二叉树\assets\1539940529483.png)
+
+  
+
+* **双向旋转（先左后右）**：由于在结点 P 的左子树为根节点的右子树上插入结点，导致了结点P失衡，平衡因子变为了2，那么我们需要经过两次旋转（先左旋再右旋）来使得以P为root的二叉树恢复平衡。过程和上面 先右在左的正好相反，我就不继续说明了。
