--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -48,7 +48,7 @@
 
     ![1539840633788](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539840633788.png)
 
-    我们在看我们原来的图深度是5，这里你会说，深度代表什么，那么我们用一个直观的例子来说 : 在原来的图的二叉搜索树中我们要查找17这个值，我们只需要经过5次判断，就可以确定这个值存在；在现在这个结构中呢，需要6次；这样我们就能只管的看出，二叉排序树的缺点了吧，**表中数据动态变化不可控，相同的数据按照不同的顺序传入，得到的结果大不相同，在现在的存储系统中大量用到索引，如果选择这样的结构的，绝对会成为检索的性能瓶颈，而且你要知道这个所用的动态改变，也是会先做检索，然后才增删改的，这样的结构做什么操作的性能在实际运用中都不会是好的选择**；
+    我们在看我们原来的图深度是5，这里你会说，深度代表什么，那么我们用一个直观的例子来说 : 在原来的图的二叉搜索树中我们要查找17这个值，我们只需要经过5次判断，就可以确定这个值存在；在现在这个结构中呢，需要6次；这样我们就能只管的看出，二叉排序树的缺点了吧，**表中数据动态变化不可控，相同的数据按照不同的顺序传入，得到的结果大不相同，在现在的存储系统中大量用到索引，如果选择这样的结构的，绝对会成为检索的性能瓶颈**；
 
     下面我会再次用一个极端的例子，让你们更加深刻的理解到这种结构的问题，这里我们按照这样的顺序插入数据：`15，17，18，19，21，40，56，60，68，100`
 
