--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -21,7 +21,7 @@
 
 * 一个结点的直接前驱（中序遍历后的结果序列中这个结点值的前面一个，比如上图，中序遍历结果`15,17,18,19,21,40....`,21这个结点的直接前驱就是19这个结点。）如果这个结点在树中有左子树，
 
-  先转左，然后找右到尽头，一定是它的前驱，如果转左之后没有右，那这个左就是他的前驱，（还是上图的例子21这个结点有左子树吧，转左刀15，然后找右到尽头，18，19，最后就找到了19；在看18这个结点由左子树，我们转左找到17，但是由于没有右子树了，所以这个17就是18的直接前驱）
+  先转左，然后找右到尽头，一定是它的前驱，如果转左之后没有右，那这个左就是他的前驱，（还是上图的例子21这个结点有左子树吧，转左到15，然后找右到尽头，18，19，最后就找到了19；在看18这个结点由左子树，我们转左找到17，但是由于没有右子树了，所以这个17就是18的直接前驱）
 
 * 一个结点的直接后继：知道了直接前驱，那么直接后继就不需要过多说明了，和直接前驱的正好相反。
 
@@ -60,7 +60,7 @@
 
 ## 1.5 二叉查找树的增删
 
-增（insert）就不用说了吧，利用查找去做，然后没有别的特别的东西
+增（insert）就不用说了吧，利用查找去做先查树中是否存在，存在就不插入，然后没有别的特别的东西
 
 这里主要说一下删(delete),为什么要说这个呢，是因为需要介绍在删除之后，要保持二叉排序树的中序遍历的结果中结点的前后顺序不变（这里就叫做稳定性了，后文中我都把它叫做稳点性）。
 
@@ -88,7 +88,7 @@
 
     **树的深度是6**
 
-  * 第二种做法是，令改结点P的直接前驱（或直接后继）替代P的位置，（查找直接前驱和后记的方法在上文1.2节当中有介绍），然后用这个直接前驱（直接后继）的双亲结点序接这个直接前驱（直接后继）的做子树或者右子树（这里我为什么用或呢？请你结合我前面说的前驱（后继）的特点来思考一下,虽然下文1.6节的算法代码中我有做说明），下面我分别给出用 前驱或后继 得到的结果图
+  * 第二种做法是，令改结点P的直接前驱（或直接后继）替代P的位置，（查找直接前驱和后记的方法在上文1.2节当中有介绍），然后用这个直接前驱（直接后继）的双亲结点序接这个直接前驱（直接后继）的左子树（右子树），下面我分别给出用 前驱或后继 得到的结果图
 
     * 使用前驱得到的结果图
 
@@ -110,7 +110,7 @@
       if (node.right == null) {
           // 右子树为空，只需要接上左子树
           node = node.left;
-      } else if (node.right == null) {
+      } else if (node.left == null) {
           // 左子树为空，只需要接上右子树
           node = node.right;
       } else {
@@ -144,16 +144,16 @@
       if (node.right == null) {
           // 右子树为空，只需要接上左子树
           node = node.left;
-      } else if (node.right == null) {
+      } else if (node.left == null) {
           // 左子树为空，只需要接上右子树
           node = node.right;
       } else {
           // 左右子树都不为空
-          BinaryLinkedNode pre = node.left;// 左转
-          while (pre.right != null) {
-              // 找右刀到尽头
+          BinaryLinkedNode pre = node.right;// 右转
+          while (pre.left != null) {
+              // 找左到尽头
               temp = pre;//用来记录 pre 的双亲
-              pre = pre.right;
+              pre = pre.left;
           }
           // 替换数据
           node.value = pre.value;
