--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -158,11 +158,11 @@
           // 替换数据
           node.value = pre.value;
           if( temp == node ){
-              // 就是说 左转之后由于没有右子树，那么左转的结点就是node的前驱了，那么只需要接上 pre 的左子树（可能有，也可能没有）
-              temp.left = pre.left;
+              // 就是说 右转之后由于没有左子树，那么右转的结点就是node的后继了，那么只需要接上 pre 的右子树（可能有，也可能没有）
+              temp.right = pre.right;
           }else{
-              // 就是说 找右边到尽头之后，这个 pre 肯定没有右子树了，至于左子树有没有不知道但是，按照有来做
-              temp.right = pre.left;
+              // 就是说 找左到尽头之后，这个 pre 肯定没有左子树了，至于右子树有没有不知道但是，按照有来做
+              temp.left = pre.right;
           }
       }
   }
