--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -196,6 +196,8 @@
 
 ## 2.4 平衡二叉查找树的插入过程
 
+### 2.4.1 平衡过程
+
 我这我先介绍他用于平衡的旋转过程，然后再用一个实际的例子加上，图，算法，来说明。
 
 我们在平衡二叉查找树的插入过程中，基本的插入和二叉查找树的插入有事一样的，主要需要做的是” 平衡化“处理，如何在插入一个结点，导致一个树失衡的情况下进行”平衡化“，**首先我们知道，我们做这个平衡只需要争对失衡的子树就可以了**，在知道这里的前提下，我们怎么去平衡子树呢，调整的规律可以归纳为下面四种情况。
@@ -234,21 +236,13 @@
 
 ![1539924441756](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539924441756.png)
 
-**不知道你们有没有细心的发现一些规律，**
-
-1. 旋转的中心结点，和需要调整的树的根结点，在调整之后平衡因子都变成了0
-2. 插入结点的时候，往左边，树的根结点的平衡因子+1
-3. 插入结点的时候，往右边，树的根结点的平衡因子-1
-4. 一个树的根结点的平衡因子为1，在给它插入一个结点是走向他的左子树，并且他的左子树的平衡因子也是1，这时候1+1=2 ， 树失衡了，
-5. 需要左旋的
-
 * **双向旋转（先右后左）**：由于在结点 P 的右子树为根节点的左子树上插入结点，导致了结点P失衡，平衡因子变为了-2，那么我们需要经过两次旋转（先右旋再左旋）来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
 
   ![1539923756815](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539923756815.png)
 
   上图的平衡二叉查找树中我们插入一个 39 ， 得到下图，很明显我们发现下图的的树已经失衡了
 
-  ![1539939630223](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539939630223.png)
+  ![1540005597164](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540005597164.png)
 
   **将失衡的树的 root 结点，先将root的右子树进行右旋操作，然后在对root为根结点的树进行左旋。**
 
@@ -258,8 +252,18 @@
 
   然后我们在对其 40结点的树进行左旋，得到图：
 
-  ![1539940529483](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539940529483.png)
+  ![1540005816924](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540005816924.png)
 
   
 
 * **双向旋转（先左后右）**：由于在结点 P 的左子树为根节点的右子树上插入结点，导致了结点P失衡，平衡因子变为了2，那么我们需要经过两次旋转（先左旋再右旋）来使得以P为root的二叉树恢复平衡。过程和上面 先右在左的正好相反，我就不继续说明了。
+
+### 2.4.2 平衡二叉查找树的上插入元素的递归算法描述
+
+平衡二叉树 叫做BBST (Balanced Binary Sort Tree ) 
+
+1. 若BBST是空树，则插入一个元素为e的新结点作为BBST的根节点，树的深度为1
+2. 数据结构这本书中定义的是，若e的关键字和BBST的中的根结点（这个根结点不要只是看作整棵树的跟结点，应该看作树内的结点）结点相同则不插入。**这里我们在实际过程中大多都不会这样做，`>=`的走向都是右，请看第四条**
+3. 若e的关键字小于BBST的根结点（从根结点开始，所走路劲的一个个结点都算是根结点，由于这是一个递归的设计，所以这里称为根结点）的关键字。则将e插入在BBST的左子树上，并且插入之后左子树的深度增加（+1）时，需要分下面这几种情况：
+   * 
+
