--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -200,63 +200,59 @@
 
 我这我先介绍他用于平衡的旋转过程，然后再用一个实际的例子加上，图，算法，来说明。
 
-我们在平衡二叉查找树的插入过程中，基本的插入和二叉查找树的插入有事一样的，主要需要做的是” 平衡化“处理，如何在插入一个结点，导致一个树失衡的情况下进行”平衡化“，**首先我们知道，我们做这个平衡只需要争对失衡的子树就可以了**，在知道这里的前提下，我们怎么去平衡子树呢，调整的规律可以归纳为下面四种情况。
+我们在平衡二叉查找树的插入过程中，基本的插入和二叉查找树的插入有事一样的，主要需要做的是” 平衡化“处理，如何在插入一个结点，导致一个树失衡的情况下进行”平衡化“，**首先我们知道，我们做这个平衡只需要争对失衡的子树就可以了**，在知道这里的前提下，我们怎么去平衡子树呢，调整的规律可以归纳为下面两类四种情况。
 
-* **单向右旋平衡**：由于在结点 P 的左子树为根节点的左子树上插入结点，导致了结点P失衡，平衡因子变为了2，那么我们需要经过一次右旋来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
+**针对插入到左子树的：**
 
-  ![1539922215775](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539922215775.png)
+* **单向右旋平衡**：由于在结点 P 的左子树为根节点的左子树上插入结点，导致了结点P失衡，平衡因子变为了2，那么我们需要经过一次右旋来使得以P为root的二叉树恢复平衡。
 
-  上图的平衡二叉查找树中我们插入一个 35 ， 得到下图，很明显我们发现下图的的树已经失衡了
+  **右旋就是，将失衡的树的 root结点，以他的左子树为中心，顺时针旋转，作为他的左子树的右子树，同时这个原root结点的左子树 指向它原左子树的右子树。**
 
-  ![1539922356184](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539922356184.png)
+  那么我们现在用图来解释：
 
-  
-
-  失衡的树是 50 为root的树，所以我们只要针它就可以了，这时候你们肯定会问怎么右旋，用什么做中心，下面我来讲解，**右旋就是，将失衡的树的 root结点，以他的左子树为中心，顺时针旋转，作为他的左子树的右子树，同时这个原root结点的左子树 指向它原左子树的右子树。**
-
-  **直观的感受下**：上述情况50 作为root的树失衡，根据上文我们说的右旋过程，将这个旋转的中心首先确定下来是他的左子树，也就是 40 这个结点，将 50 这个结点顺时针旋转下来作为 40 这个结点的右子树，然后将50结点的左子树指向40 结点 的右子树42，最后得到了恢复平衡后的 平衡二叉查找树：
-
-  ![1539923163210](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539923163210.png)
+  ![1540009634342](E:\文档\study-note\数据结构\二叉树\assets\1540009634342.png)
 
   
 
-**可以看到，这个最终平衡化之后的树的深度和没有插入35这个结点之前的树的深度是一样的**
+  **可以看到，这个最终平衡化之后的树的深度和没有插入35这个结点之前的树的深度是一样的**
+
+* **双向旋转（先左后右）**：由于在结点 P 的左子树为根节点的右子树上插入结点，导致了结点P失衡，平衡因子变为了2，那么我们需要经过两次旋转（先左旋再右旋）来使得以P为root的二叉树恢复平衡。
+
+  **将失衡的树的 root 结点，先将root的左子树进行左旋操作（不知道什么是左旋，那就先看下面的左旋操作，然后在回来看这部分），然后在对root为根结点的树进行右旋。**
+
+  直接看图吧
+
+![1540008139273](E:\文档\study-note\数据结构\二叉树\assets\1540008139273.png)
+
+![1540008079485](E:\文档\study-note\数据结构\二叉树\assets\1540008079485.png)
+
+​	
+
+**可以看到，这个最终平衡化之后的树的深度和没有插入39这个结点之前的树的深度是一样的**
+
+**针对插入到左子树的：**
 
 * **单向左旋平衡**：由于在结点 P 的右子树为根节点的右子树上插入结点，导致了结点P失衡，平衡因子变为了-2，那么我们需要经过一次左旋来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
 
-![1539923756815](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539923756815.png)
+  **左旋就是，将失衡的树的 root 结点，以他的右子树为中心，逆时针旋转，作为他的右子树的左子树，同时这个原root结点的右子树 指向它原右子树的左子树。**
 
-上图的平衡二叉查找树中我们插入一个 68 ， 得到下图，很明显我们发现下图的的树已经失衡了
+  那么我们现在用图来解释：
 
-![1539923918707](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539923918707.png)
+  ![1540010056491](E:\文档\study-note\数据结构\二叉树\assets\1540010056491.png)
 
-我们 40 为root的树，的you所以我们只要针它就可以了，这时候你们肯定会问怎么左旋，用什么做中心，下面我来讲解，**左旋就是，将失衡的树的 root 结点，以他的右子树为中心，逆时针旋转，作为他的右子树的左子树，同时这个原root结点的右子树 指向它原右子树的左子树。**
+  **可以看到，这个最终平衡化之后的树的深度和没有插入68这个结点之前的树的深度是一样的**
 
-**直观的感受**：上述情况40作为root的树失衡，根据上文我们说的左旋过程，将这个旋转的中心首先确定下来是他的右子树，也就是 50 这个结点，将 40 这个结点逆时针旋转下来作为 50 这个结点的左子树，然后将40结点的右子树指向50 结点 的左子树42，最后得到了恢复平衡后的 平衡二叉查找树：
-
-![1539924441756](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539924441756.png)
-
-* **双向旋转（先右后左）**：由于在结点 P 的右子树为根节点的左子树上插入结点，导致了结点P失衡，平衡因子变为了-2，那么我们需要经过两次旋转（先右旋再左旋）来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
-
-  ![1539923756815](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539923756815.png)
-
-  上图的平衡二叉查找树中我们插入一个 39 ， 得到下图，很明显我们发现下图的的树已经失衡了
-
-  ![1540005597164](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540005597164.png)
+* **双向旋转（先右后左）**：由于在结点 P 的右子树为根节点的左子树上插入结点，导致了结点P失衡，平衡因子变为了-2，那么我们需要经过两次旋转（先右旋再左旋）来使得以P为root的二叉树恢复平衡。
 
   **将失衡的树的 root 结点，先将root的右子树进行右旋操作，然后在对root为根结点的树进行左旋。**
 
-  **直观的感受**：上述情况40作为root的树失衡，根据上文我们说的先右后左的过程，首先对40结点的右子树，进行右旋操作（旋转过程和前面的是一样的，在这里我就不再次说明），得到图：
+  那么我们现在用图来解释：	
 
-  ![1539940360816](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539940360816.png)
+  ![1540008662913](E:\文档\study-note\数据结构\二叉树\assets\1540008662913.png)
 
-  然后我们在对其 40结点的树进行左旋，得到图：
+  ![1540008848592](E:\文档\study-note\数据结构\二叉树\assets\1540008848592.png)
 
-  ![1540005816924](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540005816924.png)
-
-  
-
-* **双向旋转（先左后右）**：由于在结点 P 的左子树为根节点的右子树上插入结点，导致了结点P失衡，平衡因子变为了2，那么我们需要经过两次旋转（先左旋再右旋）来使得以P为root的二叉树恢复平衡。过程和上面 先右在左的正好相反，我就不继续说明了。
+**可以看到，这个最终平衡化之后的树的深度和没有插入39这个结点之前的树的深度是一样的**
 
 ### 2.4.2 平衡二叉查找树的上插入元素的递归算法描述
 
