--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -224,13 +224,11 @@
 
 ![1540008139273](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540008139273.png)
 
-![1540008079485](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540008079485.png)
-
-​	
+![1540008079485](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1540010321888.png)​
 
 **可以看到，这个最终平衡化之后的树的深度和没有插入39这个结点之前的树的深度是一样的**
 
-**针对插入到左子树的：**
+**针对插入到右子树的：**
 
 * **单向左旋平衡**：由于在结点 P 的右子树为根节点的右子树上插入结点，导致了结点P失衡，平衡因子变为了-2，那么我们需要经过一次左旋来使得以P为root的二叉树恢复平衡。那么我们现在用图来解释
 
