--- a/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
+++ b/数据结构/二叉树/在查找（索引）使用的特殊二叉树.md
@@ -200,7 +200,7 @@
 
 我这我先介绍他用于平衡的旋转过程，然后再用一个实际的例子加上，图，算法，来说明。
 
-我们在平衡二叉查找树的插入过程中，基本的插入和二叉查找树的插入有事一样的，主要需要做的是” 平衡化“处理，如何在插入一个结点，导致一个树失衡的情况下进行”平衡化“，**首先我们知道，我们做这个平衡只需要争对失衡的子树就可以了**，在知道这里的前提下，我们怎么去平衡子树呢，调整的规律可以归纳为下面两类四种情况。
+我们在平衡二叉查找树的插入过程中，基本的插入和二叉查找树的插入有事一样的，主要需要做的是” 平衡化“处理，如何在插入一个结点，导致一个树失衡的情况下进行”平衡化“，**首先我们知道，我们做这个平衡只需要针对失衡的子树就可以了**，在知道这里的前提下，我们怎么去平衡子树呢，**调整的规律可以归纳为下面两类四种情况。**
 
 **针对插入到左子树的：**
 
@@ -257,7 +257,73 @@
 平衡二叉树 叫做BBST (Balanced Binary Sort Tree ) 
 
 1. 若BBST是空树，则插入一个元素为e的新结点作为BBST的根节点，树的深度为1
+
 2. 数据结构这本书中定义的是，若e的关键字和BBST的中的根结点（这个根结点不要只是看作整棵树的跟结点，应该看作树内的结点）结点相同则不插入。**这里我们在实际过程中大多都不会这样做，`>=`的走向都是右，请看第四条**
+
 3. 若e的关键字小于BBST的根结点（从根结点开始，所走路劲的一个个结点都算是根结点，由于这是一个递归的设计，所以这里称为根结点）的关键字。则将e插入在BBST的左子树上，并且插入之后左子树的深度增加（+1）时，需要分下面这几种情况：
-   * 
+   * BBST的根结点的平衡因子为 - 1 (右子树深度大于左子树深度1)，则只需要将根结点的平衡因子改为0，BBST深度不变
+
+     如图：
+
+     ![1540011463127](E:\文档\study-note\数据结构\二叉树\assets\1540011463127.png)
+
+   * BBST的根结点的平衡因子为 0 (右子树深度等于左子树深度)，则只需要将根结点的平衡因子改为1，BBST深度增加1.
+
+     如图：
+
+     ![1540013634967](E:\文档\study-note\数据结构\二叉树\assets\1540013634967.png)
+
+     
+
+   * BBST的根结点的平衡因子为 1 (左子树深度等于右子树深度1)：
+
+     * 若BBST 的根结点 P 的左子树的根结点PL 的平衡因子在插入节点后变为1，进行右旋处理，并将根节点P，和他的左子树PL 的平衡因子改为 0。树的深度不变
+
+       如图
+
+       ![1540015066588](E:\文档\study-note\数据结构\二叉树\assets\1540015066588.png)
+
+       **上图 中间 的 图 38 的平衡因子 就是“1”，因为在 递归算法中，他不会变成2，而是在平衡处理的时候直接修改为了0，后面的算法时间中，你们会看到**
+
+     * 若BBST 的根结点的左子树的根结点的平衡因子在插入节点后变为-1，先左后右，如图
+
+       ![1540016075317](E:\文档\study-note\数据结构\二叉树\assets\1540016075317.png)	
+
+       **实际算法中，平衡因子在旋转之前就修改好了**
+
+   4.若e的关键字大于等于BBST的根结点（从根结点开始，所走路劲的一个个结点都算是根结点，由于这是一个递归的设计，所以这里称为根结点）的关键字。则将e插入在BBST的右子树上，并且插入之后右子树的深度增加（+1）时，需要分下面这几种情况：情况正好和上面的过程相反
+
+   - BBST的根结点的平衡因子为 1 (左子树深度大于右子树深度1)，则只需要将根结点的平衡因子改为0，BBST深度不变
+
+     如图：
+
+     ![1540015746348](E:\文档\study-note\数据结构\二叉树\assets\1540015746348.png)
+
+   - BBST的根结点的平衡因子为 0 (右子树深度等于左子树深度)，则只需要将根结点的平衡因子改为1，BBST深度增加1.
+
+     如图：
+
+     
+
+     ![1540013678733](E:\文档\study-note\数据结构\二叉树\assets\1540013678733.png)
+
+     
+
+   - BBST的根结点的平衡因子为 -1 (左子树深度等于右子树深度1)：
+
+     - 若BBST 的根结点 P 的右子树的根结点PR的平衡因子在插入节点后变为-1，进行左旋处理，并将根节点P，和他的右子树PR 的平衡因子改为 0。树的深度不变
+
+       如图
+
+       ![1540016295083](E:\文档\study-note\数据结构\二叉树\assets\1540016295083.png)
+
+     - 若BBST 的根结点的右子树的根结点的平衡因子在插入节点后变为1，先右后做，如图
+
+       
+
+       ![1540016418153](E:\文档\study-note\数据结构\二叉树\assets\1540016418153.png)
+
+### 2.4.3 平衡二叉查找树，插入算法实现
+
+
 
